# synthetic-triage-risk-ml

./: .gitignore  README.md  pyproject.toml
src/data/: generate_synthetic.py  make_dataset.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py
src/utils/: config.py  logging.py  metrics.py
tests/: test_generate_synthetic.py  test_train_smoke.py
